--- a/_posts/2015-05-17-hai-world.md
+++ b/_posts/2015-05-17-hai-world.md
@@ -4,9 +4,12 @@ title: "hai world -- first post ever"
 categories: [general]
 ---
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ~~~
-Building this blog with <3
+Q: Why do programmers always mix up Halloween and Christmas?
+
+A: Because Oct 31 == Dec 25!
 ~~~
 
 
